--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #121212; /* Dark background */
+    background-color:#3d3d3d; /* Dark background */
     color: #FFFFFF; /* White text for readability on dark background */
     font-family: "Source Code Pro", monospace;
     margin: 0;
