--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,6 @@
 body {
-    background-color:#3d3d3d; /* Dark background */
-    color: #FFFFFF; /* White text for readability on dark background */
+    background-color:#3d3d3d; 
+    color: #FFFFFF;
     font-family: "Source Code Pro", monospace;
     margin: 0;
     padding: 0;
@@ -14,31 +14,31 @@ body {
 }
 
 
-/* Container for City Name */
+
 .city-name {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%; /* This ensures it takes up full height if needed */
-    width: 100%; /* Ensures it takes up full width */
+    height: 100%; 
+    width: 100%;
     text-align: center;
-    margin: 0; /* Remove any default margin */
-    padding: 0; /* Remove any default padding */
-    font-size: 2em; /* Base font size */
-    color: #FFFFFF; /* White text color */
+    margin: 0; 
+    padding: 0; 
+    font-size: 2em; 
+    color: #FFFFFF; 
     margin: 0;
 }
 
-/* Responsive adjustments */
+
 @media (min-width: 768px) {
     .city-name h1 {
-        font-size: 2.5em; /* Larger font size for medium screens */
+        font-size: 2.5em;
     }
 }
 
 @media (min-width: 1024px) {
     .city-name h1 {
-        font-size: 3em; /* Even larger font size for large screens */
+        font-size: 3em; 
     }
 }
 
