--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -1,4 +1,3 @@
-/* Navbar Styling */
 #navbar {
     display: flex;
     flex-direction: column;
@@ -9,7 +8,7 @@
 }
 
 #navbar-title {
-    color: #F0FFFF;/* White text for the title */
+    color: #F0FFFF;
     font-size: 1.8em;
     margin: 0;
     text-align: center;
@@ -20,7 +19,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    max-width: 500px; /* Limit width on large screens */
+    max-width: 500px; 
 }
 
 #searchbar {
@@ -28,25 +27,25 @@
     padding: 10px;
     border: 1px solid #3d3d3d;
     border-radius: 15px 0 0 15px;
-    background-color: #282828; /* Input background color */
-    color: #FFFFFF; /* Text color */
+    background-color: #282828; 
+    color: #FFFFFF;
     outline: none;
     font-size: 1em;
     transition: border 0.3s ease-in-out;
 }
 
 #searchbar::placeholder {
-    color: #B3B3B3; /* Placeholder text color */
+    color: #B3B3B3; 
 }
 
 #searchbar:focus {
-    border-color: #4682B4; /* Lighter border on focus */
+    border-color: #4682B4; 
 }
 
 #searchbutton {
     padding: 10px 20px;
-    background-color: #404040; /* Button background color */
-    color: #F0FFFF; /* White text for the button */
+    background-color: #404040; 
+    color: #F0FFFF; 
     border: none;
     border-radius: 0 15px 15px 0;
     cursor: pointer;
@@ -56,10 +55,10 @@
 
 #searchbutton:hover {
     background: linear-gradient(135deg, #87CEEB 0%, #4682B4 100%);
-    color: white;/* Lighter button color on hover */
+    color: white;
 }
 
-/* Media Queries for Responsive Design */
+
 @media (min-width: 768px) {
     #navbar {
         flex-direction: row;
